bug squashing

--- a/src/containers/about/styles.scss
+++ b/src/containers/about/styles.scss
@@ -1,17 +1,17 @@
 .about {
-    &__content {
+    &__stuff {
         display: flex;
         gap: 20px;
         padding: 20px;
         width: 100%;
 
-        &__personalWrapper,
-        &__servicesWrapper {
+        &__mycontainer,
+        &__servicescontainer {
             margin-top: 14px;
             width: 50%;
         }
 
-        &__personalWrapper {
+        &__mycontainer {
             h3 {
                 margin-bottom: 10px;
                 margin-top: 10px;
@@ -21,7 +21,7 @@
 
             }
 
-            h3.personalInformationHeaderText {
+            h3.myInformationHeaderText {
                 padding-top: 20px;
             }
 
@@ -57,12 +57,13 @@
             }
         }
 
-        &__servicesWrapper {
+        &__servicescontainer {
             display: flex;
             justify-content: center;
             align-items: center;
+            padding-top: 30px;
 
-            &__innerContent {
+            &__innerstuff {
                 width: 350px;
                 height: 350px;
                 background: radial-gradient(180px,
@@ -111,16 +112,16 @@
 }
 
 @media only screen and (max-width: 765px){
-    .about__content {
+    .about__stuff {
         flex-direction: column;
 
-        &__personalWrapper, &__servicesWrapper{
+        &__mycontainer, &__servicescontainer{
             width:100%
         }
 
-        &__servicesWrapper {
+        &__servicescontainer {
             margin: 10px 0px;
-            &__innerContent {
+            &__innerstuff {
                 width: 300px;
                 height: 300px;
                 background: radial-gradient(120px,var(--yellow-theme-main-color),transparent 120%);
